--- a/css/style.css
+++ b/css/style.css
@@ -2383,21 +2383,30 @@ body {
 .item-tile-prt .tile-logo-text,
 .item-tile-prt-third .tile-logo-text,
 .item-tile-prt-four .tile-logo-text {
-  width: 96px;
-  height: 96px;
+  display: block;
+  width: 100%;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  margin: 0 0 24px 0;
+}
+.item-tile-prt-second .tile-logo-inner-text,
+.item-tile-prt .tile-logo-inner-text,
+.item-tile-prt-third .tile-logo-inner-text,
+.item-tile-prt-four .tile-logo-inner-text {
+  width: auto;
+  display: inline-block;
+  vertical-align: middle;
   border: 1px solid #C9CBCE;
   border-radius: 10px;
-  display: -ms-flexbox;
-  display: flex;
   -ms-flex-align: center;
       align-items: center;
   -ms-flex-pack: center;
       justify-content: center;
-  text-align: center;
-  font-size: 32px;
-  font-weight: bold;
+  line-height: 1.4;
+  font-weight: 500;
   color: #FB435B;
-  margin: 0 0 16px 0;
+  padding: 2.3rem 15px;
+  text-align: left;
 }
 .item-tile-prt-four {
   display: -ms-flexbox;
